# bob-agent

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  AUDIT_REPORT2.md  AUDIT_REPORT_v0.3.md  CHANGELOG.md  Caddyfile.tmp  Cargo_VPS.toml  Cargo_relay.toml  LLM_WIKI.md  OPEN_SOURCE_WORKFLOW.md  README.md  _wiki_prompt_tmp.txt  bob-relay.js  bob-relay.service  bob-services.sh  bump.py  check_config.py  check_db.py  check_jules_results.py  check_projects.py  db_output.txt  deploy_website.bat  design_principles.md  fix.md  fix_bridge.py  fix_chatview.py  icon-manifest.json  implementation_plan.md  index.html  invoke_jules.py  invoke_jules_audit.py  invoke_jules_review.py  invoke_jules_security.py  invoke_jules_sprint2.py  invoke_jules_sprint6.py  invoke_jules_t602.py  jules_output.txt  jules_output_utf8.txt  jules_task_T406.md  (+23 more)
.github/workflows/: android.yml
deploy/: bob_relay.py  deploy_relay_vps3.py
docs/: 20260606_AI 桌面助手竞品与差异化战略.docx  20260612_Audit.txt  AI 跨端 GUI 自动化技术分析_20260614.docx  ARCHITECTURE.md  Bob Agent产品研发战略与架构指导文件_20260614.docx  Bob-Agent 知识库架构全景图walkthrough_20260516.md  FEATURES.md  MOBILE_BLUEPRINT.md  REFERENCES.md  REQUIREMENTS.md  TICKET_MANAGEMENT_BLUEPRINT.md  TODOLIST_INTEGRATION.md  USER_GUIDE.md  agents_electron.md  archive_development_plan_electron.md  archive_todo_electron_v0.2.md  bob的文件传输思路.docx  bob的文件传输思路.txt  cognitive_desktop_vision_20260610.md  deep_research_prompts_20260610.md  expert_panel_framework_20260610.md  gui_analysis_extracted.txt  implementation_plan_0.3_with_wechat.md  implementation_plan_20260515.md  implementation_plan_20260516.md  implementation_plan_kb_native_20260516.md  note_taking_reconstruction_plan_20260630.md  postmortem_electron_to_tauri.md  postmortem_electron_to_tauri_audit.md  strategy_extracted.txt  三亚天悦城下载链接.txt  分布式 Agent 认知系统审视.docx
electron/: main.js  preload.js
electron/services/: calendar.js  db.js  file-reader.js  folder-tracker.js  llm-client.js  mcp-client.js  memory-engine.js  micro-compact.js  obscura-driver.js  parser.js  plugin-manager.js
electron/tools/: base.js  registry.js
electron/tools/built-in/: brain_search.js  browser_automation.js  create_event.js  document_parser.js  kb_convert.js  kb_estimate.js  kb_index.js  link_extractor.js  list-directory.js  read-file.js  search_events.js  system_info.js  system_time.js  tinyfish_fetch.js  track_folder.js  untrack_folder.js  update_event.js  weather.js  (+3 more)
error/: crash_log.txt  error_20260702.txt  github action error_20260709.txt
installer/: package-lock.json  package.json
installer/public/: guide.md
installer/src/: App.vue
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/icons/: icon.icns
installer/src-tauri/src/: lib.rs
keyring_test/: Cargo.toml
keyring_test/src/: main.rs
public/: guide.md  icon_manifest.json
resources/: bob_logo.dwg
scripts/: build_payload.mjs  generate_android_icons.py  install_pdfium.ps1  patch_android_colors.py  patch_android_icons.py  patch_android_intent.py  release.bat  sync_android_icons.py  upload_github_release.py  wait-for-vite.js
scripts/android_patches/: ShareActivity.kt
skills/AKP_Link_Harvester/: SKILL.md  SKILL.sync-conflict-20260507-164344-D5RX7LF.md
skills/cluster_ops/: SKILL.md
skills/file-organization-architect/: SKILL.md
skills/folder-to-wiki/: SKILL.md
skills/invoke-jules/: SKILL.md
skills/mckinsey-consultant/: README.md
skills/mckinsey-designer/: SKILL.md
skills/model-registry/: SKILL.md
skills/note_graphify/: SKILL.md  __main__.py
skills/pptx-translate/: SKILL.md
skills/requirement-analyst/: SKILL.md
skills/semantic-distiller/: SKILL.md
skills/skill-creator/: SKILL.md
skills/travel_planner/: SKILL.md
skills/web-style-analyzer/: examples.md
src/: App.vue  i18n.js  index.css  main.js  tauri-bridge.js
src-tauri/: 2  Cargo.toml  Cargo.toml.bak  PDFiumConfig.cmake  build.rs  hooks.nsi  scratch.rs  tauri.conf.json  test_group.rs  test_qwen.rs
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/licenses/: chromiumoxide.txt
src-tauri/resources/: model_providers.json
src-tauri/skills/update_models/: SKILL.md
src-tauri/src/: assertions.rs  barcode.rs  browser.rs  calendar.rs  candle_engine.rs  connector.rs  crypto.rs  db.rs  discord.rs  doctor.rs  dream.rs  evolution.rs  file_share.rs  filesystem.rs  gcp_auth.rs  gmail.rs  goal.rs  google_calendar.rs  http_api.rs  im_sessions.rs  kb_extractor.rs  kb_indexer.rs  keychain.rs  kg.rs  lan_sync.rs  lark.rs  lib.rs  llm.rs  main.rs  mcp.rs  model_manager.rs  notebook.rs  outbox.rs  pdf_renderer.rs  plugins.rs  scheduler.rs  sidecar.rs  skills_sync.rs  sync_engine.rs  sync_resolver.rs  (+5 more)
src-tauri/src/exports/: docx.rs  mod.rs  pptx.rs  report.rs  xlsx.rs
src-tauri/src/wechat/: accounts.rs  api.rs  cdn.rs  commands.rs  login_qr.rs  mod.rs  monitor.rs  msg_queue.rs  session_mgr.rs  types.rs
src/assets/: mobile_models.json
src/components/: ActionItemCard.vue  BottomNavigation.vue  BrowserEnableCard.vue  CodeBlock.vue  ConfirmCard.vue  CustomSelect.vue  FileCard.vue  FolderDropCard.vue  GlobalDialog.vue  KBEstimateCard.vue  ModelHub.vue  MorningBriefing.vue  NoteExplorer.vue  PluginManager.vue  QuickNoteOverlay.vue  SearchCard.vue  SetupWizard.vue  TicketCard.vue  TiptapEditor.vue  TodoList.vue  WeekTimeline.vue
src/composables/: useChat.js  useDialog.js  useDragDrop.js  useModelSwitcher.js
src/constants/: theme.js
src/extensions/: WikilinkExtension.js
src/locales/: en-US.json  zh-CN.json
src/utils/: date.js  markdown.js
src/views/: ChatView.vue  InboxView.vue  KnowledgeGraphView.vue  SettingsView.vue
temp_build/: Cargo.toml
temp_build/src/: main.rs
temp_zip_extract/skills/: SKILLS_INDEX.md
tests/: file-reader.test.js  micro-compact.test.js
web-drop/: index.html
website/: bump_version.py  guide.html  index.html  index_en.html  style.css
wiki_test/raw/: 研究报告.raw.md
华发_wiki/: 20251009_新框架.xlsx.wiki.md  directory_index.md  华发冰雪世界研究报告（初稿）.pdf.wiki.md  华发冰雪世界研究报告（初稿）.pptx.wiki.md  华发冰雪大世界考察报告 PPT框架.xlsx.wiki.md  顾问清单.xlsx.wiki.md
(+55 files in other folders)
