[package]
name = "bob"
version = "0.3.1-0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"
default-run = "bob"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0-rc"
dirs = "5.0"
tauri-plugin-dialog = "2.0.0-beta.0"
tauri-plugin-shell = "2.0.0-rc"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3.32"
futures = "0.3"
bytes = "1"
reqwest = { version = "0.13.3", features = ["stream", "json"] }
axum = { version = "0.8", features = ["http2", "ws"] }
walkdir = "2.5.0"
scraper = "0.22"
chrono = "0.4"
urlencoding = "2.1"
percent-encoding = "2.3"

# LLM-Wiki 知识库引擎 — 本地文件解析
lopdf = "0.33.0"
pdfium-render = "0.8.21"
calamine = "0.28"
zip = "2.4"
quick-xml = "0.37"
tauri-plugin-single-instance = "2.0.0-rc"
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.0-rc"
qrcode = "0.14"
base64 = "0.22"

# WeChat CDN 媒体上传 — AES-128-ECB 加密 + MD5 哈希
aes = "0.8"
md-5 = "0.10"
rand = "0.8"

# GCP Vertex AI 鉴权 — JWT RS256 签名
jsonwebtoken = "9"

# 浏览器增强 — CDP 控制本机 Edge/Chrome
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
tauri-plugin-notification = "2.0.0-beta.0"
once_cell = "1.19"
rust_xlsxwriter = "0.66.0"
docx-rs = "0.4.20"
open = "5.3.5"
command-group = { version = "5.0.1", features = ["with-tokio"] }
socket2 = "0.6.4"
trash = "5.2.3"
lazy_static = "1.5.0"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
serde_yaml = "0.9.34"
image = "0.25.6"
async-stream = "0.3.6"
aes-gcm = "0.10"
webrtc = "0.12"
rustls = { version = "0.23", features = ["ring"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_JobObjects", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_UI_WindowsAndMessaging", "Win32_System_DataExchange"] }
