[package]
name = "bob"
version = "0.5.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"
default-run = "bob"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
regex = "1.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0"
dirs = "5.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3.32"
futures = "0.3"
bytes = "1"
axum = { version = "0.8", features = ["http2", "ws"] }
walkdir = "2.5.0"
scraper = "0.22"
chrono = "0.4"
urlencoding = "2.1"
percent-encoding = "2.3"

# LLM-Wiki 鐭ヨ瘑搴撳紩鎿?鈥?鏈湴鏂囦欢瑙ｆ瀽
lopdf = "0.33.0"
pdfium-render = "0.8.21"
calamine = "0.28"
zip = "2.4"
quick-xml = "0.37"

tauri-plugin-clipboard-manager = "2.0.0"
qrcode = "0.14"
base64 = "0.22"

# WeChat CDN 濯掍綋涓婁紶 鈥?AES-128-ECB 鍔犲瘑 + MD5 鍝堝笇
aes = "0.8"
md-5 = "0.10"
rand = "0.8"

# GCP Vertex AI 閴存潈 鈥?JWT RS256 绛惧悕
jsonwebtoken = "9"

# 娴忚鍣ㄥ寮?鈥?CDP 鎺у埗鏈満 Edge/Chrome
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
tauri-plugin-notification = "2.0.0"
once_cell = "1.19"
rust_xlsxwriter = "0.66.0"
docx-rs = "0.4.20"
open = "5.3.5"
command-group = { version = "5.0.1", features = ["with-tokio"] }
socket2 = "0.6.4"

lazy_static = "1.5.0"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
serde_yaml = "0.9.34"
image = "0.25.6"
async-stream = "0.3.6"
aes-gcm = "0.10"
webrtc = "0.12"
rustls = { version = "0.23", features = ["ring"] }
ed25519-dalek = "2.1.1"
argon2 = "0.5.3"
tauri-plugin-barcode-scanner = "2"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls-webpki-roots", "stream", "json"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
candle-core = "0.11.0"
candle-nn = "0.11.0"
candle-transformers = "0.11.0"
tokenizers = "0.22"
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_JobObjects", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_UI_WindowsAndMessaging", "Win32_System_DataExchange"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
trash = "5.2.3"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[profile.dev]
opt-level = 0 # Keep app compilation fast

[profile.dev.package."*"]
opt-level = 3 # But optimize dependencies (candle) for speed!
