[package]
name = "bob-installer"
version = "0.6.0"
description = "Bob Agent Installer"
authors = ["xm_bo"]
edition = "2021"

[lib]
name = "installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
mslnk = "0.1"
winreg = "0.55"
